--- a/prueba-futuros-residentes/package.json
+++ b/prueba-futuros-residentes/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@next/font": "13.4.13",
+    "cors": "^2.8.5",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0"
